feat(shared-kernel): implement ValueObject base class with DDD strict architecture
- Add abstract ValueObject<T> base class with deep equality and immutability
- Implement property-based tests for equality, transitivity, and serialization
- Refactor ContentHash to extend ValueObject (pilot implementation)
- Add TypeScript path aliases (@/ingestion, @/shared) with Jest support
- Add ESLint rules to enforce path alias usage over relative imports
- Implement strict DDD separation: pure VOs, domain services, infrastructure
- Create ContentHashGenerator domain service for hash computation
- Add NodeHash infrastructure implementation with @Injectable
- Create Hash interface in domain/interfaces/external
- Add DDD naming conventions steering file (no suffixes, clean names)
- All tests passing (9/9 ContentHash tests + 14/14 ValueObject tests)

Architecture:
- Value Objects: Pure, immutable, zero dependencies, only validation
- Domain Services: Orchestrate VOs using infrastructure abstractions
- Infrastructure: Technical implementations with framework decorators

Breaking changes:
- ContentHash.fromContent() now requires ContentHashGenerator
- ContentHash.fromHash() renamed to ContentHash.create()

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -7,7 +7,11 @@
     "incremental": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": true
+    "removeComments": true,
+    "paths": {
+      "@/ingestion/*": ["src/ingestion/*"],
+      "@/shared/*": ["src/shared/*"]
+    }
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
