--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -39,6 +39,7 @@
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.2.2",
     "fast-check": "^4.5.3",
     "globals": "^16.0.0",
@@ -68,6 +69,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "^@/ingestion/(.*)$": "<rootDir>/ingestion/$1",
+      "^@/shared/(.*)$": "<rootDir>/shared/$1"
+    }
   }
 }
