--- a/package.json
+++ b/package.json
@@ -19,16 +19,18 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.3.0",
+    "@commitlint/config-conventional": "^20.3.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "audit-ci": "^6.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.0",
-    "typescript": "^5.3.0",
-    "audit-ci": "^6.6.0"
+    "typescript": "^5.3.0"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
