ci: enforce zero warnings in lint check
- Added --max-warnings=0 flag to lint:check script
- CI will now fail if there are any ESLint warnings
- Ensures code quality standards are maintained

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "cli": "ts-node -r tsconfig-paths/register src/ingestion/api/cli/ingestion-cli.ts",
+    "cli:ingestion": "ts-node -r tsconfig-paths/register src/ingestion/api/cli/ingestion-cli.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "typecheck": "tsc --noEmit",
     "test": "jest",
