--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -34,6 +34,10 @@
     "@nestjs/platform-fastify": "^11.1.11",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/figlet": "^1.7.0",
+    "chalk": "^4.1.2",
+    "figlet": "^1.9.4",
+    "ora": "^5.4.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
