Feat/ingestion bc (#16)
* feat(ingestion): implement source adapters for multi-source content collection

Implement all 6 source adapters with comprehensive property-based tests:

- WebScraperAdapter: Web scraping with robots.txt compliance and HTML parsing
- RssFeedAdapter: RSS 2.0 and Atom feed parsing with normalization
- SocialMediaAdapter: Twitter/X and Reddit integration with rate limiting
- PdfAdapter: PDF text extraction from local files and URLs
- OcrAdapter: OCR text extraction from multiple image formats
- WikipediaAdapter: Wikipedia API integration with MediaWiki markup parsing

All adapters implement the SourceAdapter interface with:
- collect(): Collects content from configured sources
- supports(): Validates source type compatibility
- validateConfig(): Validates source-specific configuration

Property-based tests:
- Property 1: Adapter Interface Compliance (18/18 tests passed)
- Property 20: Adapter Failure Isolation (5/5 tests passed)

Validates requirements: 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 8.4

All lint, typecheck, and tests passing (369 tests across 32 suites)

* feat(ingestion): implement property test for adapter interface compliance (task 11.7)

- Add comprehensive property-based test suite for source adapter interface compliance
- Validate all 6 adapters (Web, RSS, Social Media, PDF, OCR, Wikipedia)
- Test 11 properties covering Requirements 1.1-1.6:
  * Interface implementation verification
  * Method signature validation
  * Return type consistency
  * Adapter mapping completeness
  * Adapter independence
  * Configuration validation
  * Error handling patterns
- All tests passing with 100 iterations each
- Fix ESLint errors in previously committed test files
- Disable unbound-method rule for test files (common Jest pattern)
- Update PBT status to passed
- Mark task 11.7 as completed

* fix: resolve test failures with mock resets and module dependencies

- Add jest.resetAllMocks() and mockClear() in property test iterations to prevent mock acc

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,12 +12,19 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "cli:ingestion": "ts-node -r tsconfig-paths/register src/ingestion/api/cli/ingestion-cli.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/data-source.ts",
+    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/data-source.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/data-source.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/data-source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -27,6 +34,10 @@
     "@nestjs/platform-fastify": "^11.1.11",
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/figlet": "^1.7.0",
+    "chalk": "^4.1.2",
+    "figlet": "^1.9.4",
+    "ora": "^5.4.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
