feat(cli): refactor CLI to interactive menu with inquirer.js
- Replaced Commander.js with inquirer.js for interactive prompts
- Added main menu with list selection for actions (ingest, schedule, configure, exit)
- Implemented step-by-step flows for each action:
  - ingestFlow: prompts for source ID with confirmation
  - scheduleFlow: prompts for source ID and schedule time (now/custom)
  - configureFlow: prompts for create/update, source details, config, credentials, active status
- Added navigation options after each action (back to main menu or exit)
- Kept ASCII art banner and ora spinners for visual feedback
- Removed old Commander.js command definitions and tests
- Removed CLI exports (CLI now runs directly via npm run cli:ingestion)
- All 424 tests passing
- Added explicit return types to all validate functions for ESLint compliance

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -41,9 +41,11 @@
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/figlet": "^1.7.0",
+    "@types/inquirer": "^9.0.9",
     "chalk": "^4.1.2",
     "dotenv": "^16.6.1",
     "figlet": "^1.9.4",
+    "inquirer": "^8.2.7",
     "ora": "^5.4.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
