--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -4,6 +4,7 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=crypto_knowledge
+DB_LOGGING=true  # Set to 'false' to disable SQL query logging (useful for CLI)
 
 # Application Configuration
 NODE_ENV=development
