--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -42,14 +42,23 @@
     "@nestjs/typeorm": "^11.0.0",
     "@types/figlet": "^1.7.0",
     "@types/inquirer": "^9.0.9",
+    "boxen": "^8.0.1",
+    "center-align": "^1.0.1",
     "chalk": "^4.1.2",
+    "chalk-animation": "^2.0.3",
+    "clear": "^0.1.0",
+    "cli-cursor": "^5.0.0",
     "dotenv": "^16.6.1",
+    "enquirer": "^2.4.1",
     "figlet": "^1.9.4",
+    "gradient-string": "^3.0.0",
     "inquirer": "^8.2.7",
     "ora": "^5.4.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "string-width": "^7.2.0",
+    "term-size": "^3.0.2",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
@@ -58,7 +67,10 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/center-align": "^1.0.2",
+    "@types/clear": "^0.1.4",
     "@types/express": "^5.0.0",
+    "@types/gradient-string": "^1.1.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
