--- a/apps/backend/docker-compose.yml
+++ b/apps/backend/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     container_name: crypto-knowledge-pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@crypto.local
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     ports:
