--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -110,7 +110,8 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "^@/ingestion/(.*)$": "<rootDir>/ingestion/$1",
-      "^@/shared/(.*)$": "<rootDir>/shared/$1"
+      "^@/shared/(.*)$": "<rootDir>/shared/$1",
+      "^@/../test/(.*)$": "<rootDir>/../test/$1"
     }
   }
 }
