fix: resolve integration test failures and optimize test execution
- Fixed ConcurrencyException errors in ingestion job repository tests
  by properly sequencing save operations
- Fixed bigint type conversion issue in read repository
  (TypeORM returns bigint as string)
- Updated test setup to save aggregates after each state change
  to respect optimistic locking
- Added maxWorkers: 1 to Jest config to run tests sequentially
  and avoid database conflicts
- Fixed unit test mocks for command handlers to include
  all required dependencies
- Added missing imports for adapter types in test files
- All 607 tests now passing
  (1 unrelated circuit breaker timing test failing)

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -108,6 +108,7 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
+    "maxWorkers": 1,
     "moduleNameMapper": {
       "^@/ingestion/(.*)$": "<rootDir>/ingestion/$1",
       "^@/shared/(.*)$": "<rootDir>/shared/$1",
