--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,21 @@ jobs:
     timeout-minutes: 15
     needs: quality
 
+    services:
+      postgres:
+        image: postgres:16-alpine
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: crypto_knowledge_test
+        ports:
+          - 5433:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -62,6 +77,13 @@ jobs:
 
       - name: Run unit tests with coverage
         run: npm run test:cov
+        env:
+          DB_HOST: localhost
+          DB_PORT: 5433
+          DB_USERNAME: postgres
+          DB_PASSWORD: postgres
+          DB_DATABASE_TEST: crypto_knowledge_test
+          NODE_ENV: test
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
