feat(infra): add Terraform configuration for GitHub branch protection
- Add Terraform config to manage branch protection rules
- Protect master branch with required status checks
- Require all CI checks to pass: Code Quality, Security Audit, Tests, Build, CI Success
- Require branches to be up to date before merging
- Block force pushes and branch deletion
- Require pull requests before merging (0 approvals for solo dev)
- Dismiss stale reviews when new commits are pushed
- Include setup script for easy configuration
- Add comprehensive documentation and examples

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,14 @@ yarn-error.log*
 
 # AI
 .kiro/
+
+# Terraform
+terraform/.terraform/
+terraform/*.tfstate
+terraform/*.tfstate.*
+terraform/*.tfvars
+terraform/*.tfvars.json
+terraform/crash.log
+terraform/crash.*.log
+terraform/.terraformrc
+terraform/terraform.rc
