chore(ci): rename test step to 'Run all tests with coverage'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run unit tests with coverage
+      - name: Run all tests with coverage
         run: npm run test:cov
         env:
           DB_HOST: localhost
