feat(refinement): complete Phase 1 - Domain Layer
Implemented complete domain layer for Refinement bounded context.

Components:
- 7 Value Objects (ChunkHash, ChunkPosition, CryptoEntity, etc.)
- 1 Entity (Chunk - renamed from RefinedChunk)
- 1 Aggregate (ContentRefinement with optimistic locking)
- 5 Domain Events (ContentRefinementStarted, ChunkAdded, etc.)
- 5 Domain Services (SemanticChunker, CryptoEntityExtractor, etc.)
- Repository/Factory interfaces (CQRS read/write separation)
- Read models optimized for queries

Tests: 330 passing (12 suites)
Architecture: Clean Architecture, DDD, SOLID, CQRS ready

Ready for Phase 2: Application Layer

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,7 +10,8 @@
     "removeComments": true,
     "paths": {
       "@/ingestion/*": ["src/ingestion/*"],
-      "@/shared/*": ["src/shared/*"]
+      "@/shared/*": ["src/shared/*"],
+      "@refinement/*": ["src/refinement/*"]
     }
   },
   "include": ["src/**/*", "test/**/*"],
