--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -112,6 +112,7 @@
     "moduleNameMapper": {
       "^@/ingestion/(.*)$": "<rootDir>/ingestion/$1",
       "^@/shared/(.*)$": "<rootDir>/shared/$1",
+      "^@refinement/(.*)$": "<rootDir>/refinement/$1",
       "^@/../test/(.*)$": "<rootDir>/../test/$1"
     }
   }
