refactor(cqrs): migrate Commands and Queries to use @nestjs/cqrs base classes
- Migrate all 8 Commands to extend Command<TResult> for type inference
- Migrate all 5 Queries to extend Query<TResult> for type inference
- Update steering documentation (12-cqrs-patterns, 17-app-layer-naming, etc.)
- Fix TypeScript 'possibly null' errors in integration and property tests
- Add npm run ci script (format -> lint:check -> typecheck -> test)
- Fix read model import path in content-item-read interface

Commands migrated:
- IngestContentCommand, ExecuteIngestionJobCommand, ScheduleJobCommand
- UpdateJobMetricsCommand, ConfigureSourceCommand, UpdateSourceHealthCommand
- RefineContentCommand, RerefineContentCommand

Queries migrated:
- GetJobByIdQuery, GetJobHistoryQuery, GetJobsByStatusQuery
- GetSourceByIdQuery, GetContentByHashQuery

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typecheck": "tsc --noEmit -p apps/backend/tsconfig.json",
     "test": "npm run test --workspaces --if-present",
     "test:cov": "npm run test:cov --workspaces --if-present",
+    "ci": "npm run format && npm run lint:check && npm run typecheck && npm run test",
     "prepare": "husky"
   },
   "devDependencies": {
