--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Full history for better analysis
+          submodules: recursive # Fetch git submodules (e.g., Firecrawl)
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -65,6 +66,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: recursive # Fetch git submodules (e.g., Firecrawl)
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -114,6 +117,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: recursive # Fetch git submodules (e.g., Firecrawl)
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -143,6 +148,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: recursive # Fetch git submodules (e.g., Firecrawl)
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
