feat: add Firecrawl UI service and fix PostgreSQL initialization
- Add firecrawl-ui service to docker-compose.yml with Vite dev server
- Fix Firecrawl PostgreSQL pg_cron configuration for proper database initialization
- Update Firecrawl submodule to fix/pg-cron-database-config branch
- Add verification and integration test scripts
- Update .env.example with Firecrawl configuration variables
- Add comprehensive FIRECRAWL_SETUP.md documentation

Changes in Firecrawl submodule:
- Configure pg_cron to use 'firecrawl' database
- Split pg_cron extension creation into separate init script
- Add Dockerfile for ingestion-ui

Resolves database initialization errors and enables UI testing

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -1,6 +1,6 @@
 # Database Configuration
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433  # Note: Using 5433 to avoid conflict with Firecrawl's PostgreSQL
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=crypto_knowledge
@@ -12,3 +12,66 @@ PORT=3000
 
 # Logging
 LOG_LEVEL=debug
+
+# ============================================================================
+# Firecrawl Configuration
+# ============================================================================
+
+# Firecrawl API URL (Docker internal network)
+# Use 'http://firecrawl-api:3002' when running backend in Docker
+# Use 'http://localhost:3002' when running backend locally (npm run start:dev)
+FIRECRAWL_API_URL=http://localhost:3002
+
+# Firecrawl API Key (optional for self-hosted, required for cloud)
+# Leave empty for local development
+FIRECRAWL_API_KEY=
+
+# Request timeout in milliseconds
+FIRECRAWL_TIMEOUT=30000
+
+# Maximum number of retry attempts for failed requests
+FIRECRAWL_MAX_RETRIES=3
+
+# ============================================================================
+# Firecrawl Service Configuration (for docker-compose.dev.yml)
+# ============================================================================
+
+# Firecrawl API Port
+FIRECRAWL_PORT=3002
+
+# Firecrawl Worker Ports
+FIRECRAWL_EXTRACT_WORKER_PORT=3004
+FIRECRAWL_WORKER_PORT=3005
+
+# Firecrawl PostgreSQL Configuration
+FIRECRAWL_POSTGRES_USER=firecrawl
+FIRECRAWL_POSTGRES_PASSWORD=firecrawl_password
+FIRECRAWL_POSTGRES_DB=firecrawl
+
+# Firecrawl Authentication (false for self-hosted)
+FIRECRAWL_USE_DB_AUTHENTICATION=false
+
+# Firecrawl Performance Configuration
+FIRECRAWL_NUM_WORKERS_PER_QUEUE=8
+FIRECRAWL_CRAWL_CONCURRENT_REQUESTS=10
+FIRECRAWL_MAX_CONCURRENT_JOBS=5
+FIRECRAWL_BROWSER_POOL_SIZE=5
+
+# Firecrawl Admin Panel Authentication
+# Access: http://localhost:3002/admin/YOUR_KEY/queues
+FIRECRAWL_BULL_AUTH_KEY=dev-admin-key
+
+# Optional: Firecrawl AI Features (OpenAI)
+# Uncomment and set if you want to use AI-powered extraction
+# FIRECRAWL_OPENAI_API_KEY=sk-...
+# FIRECRAWL_OPENAI_BASE_URL=https://api.openai.com/v1
+# FIRECRAWL_MODEL_NAME=gpt-4
+
+# Optional: Firecrawl Proxy Configuration
+# Uncomment if you need to use a proxy for web scraping
+# FIRECRAWL_PROXY_SERVER=http://proxy.example.com:8080
+# FIRECRAWL_PROXY_USERNAME=username
+# FIRECRAWL_PROXY_PASSWORD=password
+
+# Optional: Block media files to improve performance
+FIRECRAWL_BLOCK_MEDIA=false
