--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,13 +8,16 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "cli:ingestion": "ts-node -r tsconfig-paths/register src/ingestion/api/cli/ingestion-cli.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings=0",
     "typecheck": "tsc --noEmit",
+    "ci": "npm run format && npm run lint:check && npm run typecheck && npm run test",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
