feat(ingestion): add Firecrawl integration with fallback parsing
- Add Firecrawl as self-hosted submodule for JS-heavy websites
- Implement FirecrawlClient with retry logic and error handling
- Create FirecrawlParsingStrategy as fallback for dynamic content
- Add JsRenderingDetector for intelligent fallback triggering
- Update ContentParser with optional Firecrawl fallback
- Add comprehensive unit and integration tests
- Configure Firecrawl services in Docker Compose
- Add pg_cron support to Firecrawl PostgreSQL

Requirements: 1.1-7.1

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -17,6 +17,9 @@ LOG_LEVEL=debug
 # Firecrawl Configuration
 # ============================================================================
 
+# Enable/disable Firecrawl integration (true/false)
+FIRECRAWL_ENABLED=true
+
 # Firecrawl API URL (Docker internal network)
 # Use 'http://firecrawl-api:3002' when running backend in Docker
 # Use 'http://localhost:3002' when running backend locally (npm run start:dev)
@@ -31,6 +34,9 @@ FIRECRAWL_TIMEOUT=30000
 
 # Maximum number of retry attempts for failed requests
 FIRECRAWL_MAX_RETRIES=3
+
+# Enable/disable fallback to Firecrawl for JS-heavy sites (true/false)
+FIRECRAWL_FALLBACK_ENABLED=true
 
 # ============================================================================
 # Firecrawl Service Configuration (for docker-compose.dev.yml)
