--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,7 +17,9 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\" --max-warnings=0",
     "typecheck": "tsc --noEmit",
-    "ci": "npm run format && npm run lint:check && npm run typecheck && npm run test",
+    "check:deps": "node scripts/check-dependencies.js",
+    "ci": "npm run format && npm run lint:check && npm run check:deps && npm run typecheck && npm run test",
+    "ci:clean": "rm -rf node_modules && npm ci && npm run ci",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -71,6 +73,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@jest/globals": "^30.2.0",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
@@ -82,6 +85,8 @@
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "@types/turndown": "^5.0.6",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.13.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.32.0",
@@ -97,7 +102,8 @@
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.20.0"
+    "typescript-eslint": "^8.20.0",
+    "uuid": "^11.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
