fix(license): add MIT license to resolve license-check failures
- Add MIT LICENSE file to root
- Update root package.json with MIT license
- Change backend package.json from UNLICENSED to MIT
- Resolves CI license-check failures in PR #29

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "crypto-knowledge-platform",
   "version": "0.0.1",
+  "license": "MIT",
   "private": true,
   "workspaces": [
     "apps/*"
