fix(ci): add json-summary coverage reporter for CI threshold check

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -120,6 +120,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "clover",
+      "json-summary"
+    ],
     "testEnvironment": "node",
     "maxWorkers": 1,
     "moduleNameMapper": {
